# mlpipe

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg
core/: context.py  dag.py  registry.py  stage.py
managers/: mgr_diagnostics.py  mgr_metrics.py  mgr_model.py  mgr_tuner.py
stages/: stage_load.py  stage_onnx_infer.py  stage_torch_infer.py  stage_train.py
tests/: test_register.py  test_runner.py
tests/config/: cfg_dummy.yaml
tests/example/: test_example.py
tests/test_stages/: stage_dummy.py
utils/: logging.py  mode.py  parallel_runner.py  yaml_loader.py
