[project]
name = "mlpipe"
version = "0.4.0"
description = "Modular ML pipeline with YAML configs, diagnostics, ONNX/Torch support, and parallelism"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "networkx",
    "loguru",
    "torch",
    "onnxruntime-gpu",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
