[metadata]
name = mlpipe
version = 0.4.0
author = M.Glatzmaier
description = Modular AI/ML pipeline library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    pyyaml
    networkx
    loguru
    torch
    onnxruntime-gpu
python_requires = >=3.10

[options.package_data]
* = *.yaml